# finance-system

./: .gitignore  README.md  create_bills_tables.py  fast_api_thing.py  finance_system.py  frontend_test.py  pyproject.toml  reset_users.py  test.html
app/: __init__.py  app.py  core.py  database.py  schemas.py  utils.py
app/routers/: allocations.py  auth.py  bills.py  files.py  staff.py  stats.py  transactions.py
static/: index.html
