[project]
name = "finance-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "immudb-py>=1.5.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-multipart>=0.0.21",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
    "xlsxwriter>=3.2.9",
    "openpyxl>=3.1.0",
]
